--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ header .box h1:first-of-type{
 
 header .box h1:last-of-type{
     font-size: 26px;
-    margin-bottom: 40px
+    margin-bottom: 20px
 }
 
 header .box br{
@@ -2702,6 +2702,11 @@ footer .copyRight span{
     .dropdown{
         margin-bottom: 30px;
         margin-left: 0
+    }
+
+    header .box{
+        width: 100%;
+        margin-top: 60px
     }
 
     header .box h1{
