--- a/css/style2.css
+++ b/css/style2.css
@@ -1203,7 +1203,7 @@
     display: none;
 }
 .viewJobDetails .viewCourseForm {
-    background:#34495E;
+    background:#FFF;
     color:#FFF;
     padding-left:10px;
     padding-right: 10px;
